# dj-segue

./: .gitignore  PROJECT_BRIEF.md  README.md  pyproject.toml
.claude/skills/end-session/: SKILL.md
.claude/skills/start-session/: SKILL.md
docs/: SESSION_LOG.md  architecture.md  milestones.md  schema-v0.1.md
examples/: hello_mix.plan.jsonc
src/dj_segue/: __init__.py  time_math.py
src/dj_segue/analyzer/: __init__.py  beat.py  cache.py
src/dj_segue/cli/: __init__.py  main.py
src/dj_segue/executor/: __init__.py  base.py
src/dj_segue/executor/native/: __init__.py  engine.py
src/dj_segue/inspect/: __init__.py  pretty.py
src/dj_segue/preprocessor/: __init__.py  pipeline.py
src/dj_segue/schema/: __init__.py  jsonc.py  plan.py  validator.py  version.py
tests/: conftest.py  test_audio_validator.py  test_inspect.py  test_jsonc.py  test_m1_acceptance.py  test_preprocessor.py  test_schema.py  test_time_math.py  test_validator.py
tests/audio/: generate.py
